<resources>
    <string name="app_name">RegistrationApp</string>
    <string name="reg_school">School :</string>
    <string name="full_name">Full Name :</string>
    <string name="first_name">First Name</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="adventure_learning_club">Welcome to Adventure Learning Club!</string>
    <string name="registration_form">Registration Form</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone :</string>
    <string name="e_mail">E-Mail :</string>
    <string name="student_id">Student ID :</string>
    <string name="cancel">CANCEL</string>
    <string name="register">REGISTER</string>
    <string name="todo">TODO</string>
</resources>